Allow field name declaration in row literal
Add support for `row(1 as, 2 as b)` instead of the much more complex
`cast(row(1, 2) as row(a integer, b integer))`.